# qa_guru_python_7_18

./: pyproject.toml
