[tool.poetry]
name = "qa-guru-python-7-18"
version = "0.1.0"
description = "qa.guru lesson 18"
authors = ["Elena Rogozina <q.www.ta@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
selene = "2.0.0rc4"
pytest = "^7.4.2"


[tool.poetry.group.dev.dependencies]
pylint = ">=3.0,<4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
